Fixbug ui visibble

--- a/src/styles/partials/base/_common.scss
+++ b/src/styles/partials/base/_common.scss
@@ -8,6 +8,16 @@
   z-index: 1;
 }
 
+.btn-hover-video {
+  position: absolute;
+  left: 50%;
+  top: 45%;
+  font-weight: $font-weight-600;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
 .overlay-visible {
   position: absolute;
   top: 90%;
@@ -19,6 +29,18 @@
   transition: .5s ease;
   border-radius: $border-radius-5;
   background-color: rgba(0, 0, 0, 0.04);
+}
+
+.overlay-visible-video {
+  position: absolute;
+  top: 90%;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+  border-radius: $border-radius-5;
 }
 
 .container-content {
